--- a/shard.yml
+++ b/shard.yml
@@ -4,4 +4,6 @@ version: 0.1.0
 dependencies:
   kemal:
     github: sdogruyol/kemal
-    branch: master	
+    branch: master
+  pg:
+    github: will/crystal-pg
